# rust-serialization-build-time-benchmarks

./: Cargo.toml  GUIDE.md  LICENSE  README.md  devsm.toml
aggregate_graph/: README.md  main.py  pyproject.toml
report/: BENCH-social-only-json.md  BENCH-social-with-binary.md  BENCH-synthetic.md  social-only-json_model.rs  social-with-binary_model.rs  synthetic_model.rs
results/: social-only-json.json  social-with-binary.json  synthetic.json
results/social-only-json/: baseline.json  facet.json  jsony.json  musli.json  nanoserde.json  serde.json
results/social-with-binary/: baseline.json  jsony.json  musli.json  nanoserde.json  serde.json
results/synthetic/: baseline.json  facet.json  jsony.json  midiserde.json  miniserde.json  musli.json  nanoserde.json  serde.json
src/: bench.rs  cli.rs  datagen.rs  features.rs  library.rs  main.rs  plot.gnuplot  readme_prelude.md  report.rs  schema.rs  social.rs  task.rs  token.rs
src/social/: db_binary_template.rs  db_template.rs  main_template.rs  routes_template.rs
