[package]
name = "benchy"
version = "0.1.0"
edition = "2021"

[dependencies]
toml-spanner = { version = "0.4.0", default-features = false }
argwerk = "0.20"
bumpalo = "3.16.0"
proc-macro2 = { path = "/home/user/git/proc-macro2" }
rand = { version = "0.8.5", features = ["small_rng"] }
jsony = "0.1"
itoa = "1.0.11"
anyhow = "1.0.92"
foldhash = "0.1.3"
